feat(ci): add build and start stack steps in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,12 @@ jobs:
           docker version
           docker compose version
 
+      - name: Build images
+        run: docker compose build
+
+      - name: Start stack
+        run: docker compose up -d
+
       - name: Run portfolio service E2E
         run: |
           chmod +x e2e_portfolio_service.sh
