ci: add step to build API Gateway jar in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
           docker version
           docker compose version
 
+      - name: Build API Gateway jar
+        run: mvn -B -DskipTests package -f api-gateway/pom.xml
+
       - name: Build images
         run: docker compose build
 
