--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Generate JWT test keys
+        run: |
+          mkdir -p secrets
+          openssl genpkey -algorithm RSA -pkeyopt rsa_keygen_bits:4096 -out secrets/jwt_private.pem
+          openssl rsa -in secrets/jwt_private.pem -pubout -out secrets/jwt_public.pem
+
       - name: Show Docker info
         run: |
           docker version
