--- a/services/matching-engine/.gitignore
+++ b/services/matching-engine/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 .gradle
+.gradle/
 build/
+build
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -14,6 +16,7 @@ build/
 .springBeans
 .sts4-cache
 bin/
+bin
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
